--- a/restful-web-service/src/main/resources/application.properties
+++ b/restful-web-service/src/main/resources/application.properties
@@ -1,4 +1,14 @@
+logging.level.org.springframework.web=debug
 management.endpoints.web.exposure.include=*
-spring.datasource.url=jdbc:h2:mem:testdb 
+#spring.datasource.url=jdbc:h2:mem:testdb 
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
+spring.jpa.hibernate.ddl-auto=update
+
+spring.datasource.url=jdbc:mysql://localhost:3306/social-media-database
+spring.datasource.username=social-media-user
+spring.datasource.password=dummydummy
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+
