--- a/restful-web-service/src/main/resources/application.properties
+++ b/restful-web-service/src/main/resources/application.properties
@@ -11,4 +11,7 @@ spring.datasource.password=dummydummy
 spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+spring.security.user.name=username
+spring.security.user.password=password
+
 
